añado scss footer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "contenedor",
         "distribucion",
         "EFECTO",
+        "movimiento",
         "navegadorflex",
         "NIEVE"
     ]
